# better_automation

./: .gitignore  .gitmodules  README.md  pyproject.toml
better_automation/: __init__.py  anticaptcha.py  discord.py  http.py  http_client.py  imap.py  imap_client.py  playwright_.py  process.py  proxy.py  twitter.py
better_automation/base/: __init__.py  account.py  browser.py  client.py  playwright_.py  session.py
better_automation/discord/: __init__.py  account.py  api.py  client.py  errors.py  utils.py
better_automation/google/: __init__.py  account.py  browser.py  countries.json  errors.py  utils.py
better_automation/googleapis/: __init__.py  client.py  errors.py  models.py
better_automation/legacy/discord/: account.py  client.py  x_properties.py
better_automation/sms/: __init__.py  errors.py  smshub.py
better_automation/smshub/: __init__.py  client.py
better_automation/twitter/: __init__.py  account.py  api.py  client.py  errors.py  models.py  utils.py
better_automation/utils/: __init__.py  asyncio.py  file.py  generate.py  other.py
examples/: common.py
examples/discord/: account_checker.py  guild_joiner.py  pandez_guild_joiner.py
examples/google/: oauth2.py
examples/twitter/: account_checker.py  check_accounts.py  voter.py  voting.py
