[tool.poetry]
name = "better-automation"
version = "3.0.6"
description = "tweepy-self, Google, googleapis, smshub"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/better_automation"
packages = [{include = "better_automation"}]

[tool.poetry.urls]
"Source" = "https://github.com/alenkimov/better_automation"

[tool.poetry.dependencies]
python = "^3.11"
tweepy-self = "^1"
playwright-stealth = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
